Issue #215: contrast headings and links in footer

--- a/themes/dimpact/scss/drupal/_node.scss
+++ b/themes/dimpact/scss/drupal/_node.scss
@@ -6,7 +6,11 @@
     }
     #{headings()} {
       color: get_env_color('dheadingcolor', $azure);
+      [role="contentinfo"] & {
+        color: get_env_color('dheadingcolor', $hover);
+      }
     }
+
   }
 
   &.view-mode-short-teaser,
